--- a/tjf.tex
+++ b/tjf.tex
@@ -13,7 +13,11 @@
 \usepackage{enumitem}
 \usepackage{amsmath}
 \usepackage{cases}
-\usepackage[center]{titlesec} %其中 center 可使标题居中,还可设为 raggedleft (居左，默认), raggedright (居右)。
+\usepackage[]{titlesec}
+\usepackage{comment}%参看宏包说明
+\usepackage{bbding}
+
+% \usepackage[center]{titlesec} %其中 center 可使标题居中,还可设为 raggedleft (居左，默认), raggedright (居右)。
 % \titleformat{\chapter}{\centering\Huge\bfseries}{第\,\thechapter\,章}{1em}{}
 %\CTEXsetup[name={第,章},number={\chinese{chapter}}]{chapter}
 
@@ -27,25 +31,185 @@
 \begin{document}
 \AddEnumerateCounter{\chinese}{\chinese}{}
 
+\printanswers % 我要打印答案
+
 % \titleformat{\chapter}{\centering\Huge\bfseries}{第\,\thechapter\,章}{1em}{}
-\titleformat{\section}[block]{\centering\LARGE\bfseries}{第 \arabic{section} 章}{1em}{}
+% \titleformat{\section}[block]{\centering\LARGE\bfseries}{第 \arabic{section} 章}{1em}{}
+\titleformat{\section}[block]{\centering\LARGE\bfseries}{第 \chinese{section} 章}{1em}{}
+\titleformat{\subsection}{\Large}{\chinese{section}. }{1em}{}
+% \titleformat{\section}{\Large}{第\chinese{section}节 }{1em}{}
 % \titleformat{\subsection}[block]{\Large\bfseries}{ \Roman{subsection}}{1em}{}
 % \titleformat{\subsubsection}[block]{\large\bfseries}{\Roman{subsection}-\alph{subsubsection}}{1em}{}
 % \titleformat{\paragraph}[block]{\normalsize\bfseries}{[\arabic{paragraph}]}{1em}{}
 
 
-\maketitle
+\maketitle  
+%　暂时不搞标题节省时间
+
 %\mininotice
+
+% $\left(                 %左括号
+% \begin{array}{ccc}   %该矩阵一共3列，每一列都居中放置
+%   a11 & a12 & a13\\  %第一行元素      
+%   a21 & a22 & a23\\  %第二行元素
+% \end{array}
+% \right)$      
 
 \tableofcontents
 
-
+\clearpage
 % \part{部分标题}
 
 % 垃圾
 
 
-\chapter{章标题}这一章我们介绍这些内容。
+% \chapter{章标题}这一章我们介绍这些内容。
+
+\section{行列式}
+\subsection{defs}
+
+\paragraph{1.} 逆序: $i,j \in N , if(i > j)  $
+\paragraph{2.}  逆序数 \\
+% \begin{enumerate}
+  % \item 逆序: $i,j \in N , if(i > j)  $
+  % \item 逆序数
+  % \item 
+  % \paragraph{}
+D = $\begin{pmatrix} \begin{matrix} a_{ 11 } & ,... & a_{ 1n } \\ ... & ... & ... \\ a_{ n1 } & ... & a_{ nn } \end{matrix} \end{pmatrix}$=\includegraphics[scale=0.5]{assets/1-1.png}
+  % $\begin{pmatrix} \begin{matrix} a_{ 11 } & a_{ 12 } & a_{ 13 } \\ a_{ 21 } & a_{ 22 } & a_{ 23 } \\ a_{ 31 } & a_{ 32 } & a_{ 33 } \end{matrix} \end{pmatrix}$ \\
+$$=+a_{11} a_{22} a_{33} -a_{11} a_{23} a_{32} -a_{12} a_{21} a_{33} +a_{12} a_{23} a_{31}
++a_{13} a_{21} a_{32} -a_{13} a_{22} a_{31}
+$$ 
+
+  $\tau{(2\;5\;6\;4\; 1\; 2)} = 2+3+3+2$ 
+  
+    % +a_{11}　
+  $\tau{(1 2 3)}=0,\tau{(132)}=1,\tau{(213)}=1,\tau{(231)}=2,\tau{(312)}=2,\tau{321}=3$
+
+  \begin{numcases}{a_{11}}
+   a_{22}  \qquad a_{33}\\
+   a_{23}  \qquad a_{32}
+  \end{numcases}
+  \begin{numcases}{a_{12}}
+    a_{21}  \qquad a_{33}\\
+    a_{23}  \qquad a_{31}
+   \end{numcases}
+   \begin{numcases}{a_{13}}
+    a_{21}  \qquad a_{32}\\
+    a_{22}  \qquad a_{31}
+   \end{numcases}
+
+   \paragraph{3.}
+   \begin{questions}
+   \question 已知  ~$f(x)$~ = $\left(                 %左括号
+   \begin{array}{ccc}   %该矩阵一共3列，每一列都居中放置
+     2x-1 & x+2 & 3\\  %第一行元素      
+     -1 & x+4 & 3-2x\\  %第二行元素
+     5 & 3x+2 & x+2\\ 
+   \end{array}
+ \right)$                 %右括号
+ ,求 ~$x^2$~系数.
+%  \ifprintanswers
+% Only if answers are printed
+% \else
+% Only if answers are not printed
+% \fi
+  
+\begin{solution}
+  \begin{numcases}{2x-1}
+    x+4  \qquad x+2:  \qquad +(2x-1)(x+4)(x+2) \\
+    3-2x  \qquad 3x+2: \qquad -(2x-1)(3-2x)(3x+2) 
+   \end{numcases}
+   \begin{numcases}{x+2}
+      -1 \qquad x+2:  \qquad -(x+2)(x+4)(x+2) \\
+     3-2x  \qquad 5 \qquad +(x+2)(3-2x)(5)
+    \end{numcases}
+    \begin{numcases}{3}
+     -1  \qquad 3x+2  \qquad   \texttimes \\         %标准的叉
+     x+4  \qquad 5 \qquad  \texttimes
+    \end{numcases}
+\end{solution}
+
+\end{questions}  
+%  \begin{solution}
+%   \begin{parts}
+%   \part $z=3+4\textbf{i}$
+%   \part $\abs{z-w}\in[4,6]$
+%   \end{parts}
+%   \end{solution}
+% https://en.wikibooks.org/wiki/LaTeX/Teacher%27s_Corner
+
+% \Checkmark    %标准的勾
+% \XSolid             %标准的叉
+% \XSolidBrush
+% \CheckmarkBold 
+% \XSolidBold
+  
+
+\paragraph{4.}余子式与代数余子式\\
+
+D=$\left(                 %左括号
+\begin{array}{ccc}   %该矩阵一共3列，每一列都居中放置
+  a_{11} & .. & a_{1n} \\  %第一行元素      
+  .. & .. & ..\\  %第二行元素
+  a_{n1} & .. & a_{nn}\\ 
+\end{array}
+\right)$                 %右括号
+
+% ~$$~
+% \substack{a\\\sim}　写在正上方
+取~$a_{ij}~$. D去掉i行j列而成的n-1阶行列式,记~$M_{ij}-a_{ij}$~的余子式.\\
+\centerline{~$A_{ij}　\substack{\Delta \\=} (-1)^{i+j}M_{ij}$~}
+\centerline{~$a_{ij}$~的代数余子式}
+
+
+
+
+
+\subsection{特殊}
+
+
+   
+   $\left(                 %左括号
+   \begin{array}{ccc}   %该矩阵一共3列，每一列都居中放置
+     a11 & a12 & a13\\  %第一行元素      
+     a21 & a22 & a23\\  %第二行元素
+   \end{array}
+ \right)$      
+   \begin{parts}
+   \part 当~$a=1$~时，求曲线~$f(x)$~在~$x=1$~处的切线方程；
+   \part 设函数~$h(x)=f(x)-g(x)$~,求函数~$h(x)$~的单调区间.
+   \end{parts}
+
+  
+   
+
+
+    % $$\begin{equation}       %开始数学环境
+      $\left(                 %左括号
+        \begin{array}{ccc}   %该矩阵一共3列，每一列都居中放置
+          2x-1 & x+2 & 3\\  %第一行元素      
+          -1 & x+4 & 3-2x\\  %第二行元素
+          5 & 3x+2 & x+2\\ 
+        \end{array}
+      \right)$                 %右括号
+% $\sum _{ j_{ 1 }..j_{ n } }^{ n }{ (-1)^{ \tau (j_{ 1 }....j_{ n }) } } a_{ 1 }_{ j }_{ _{ 1 } }a_{ 2 }_{ j }_{ _{ 2 } }...a_{ n }_{ j }_{ _{ n } }$
+
+
+% \end{enumerate}
+
+
+\paragraph{逆序}
+
+\begin{enumerate}[label={\chinese*、},labelsep=0pt]
+
+  \item defs
+
+
+  \item 格式美观
+
+\end{enumerate}
+
 
 
 \section{节标题}这一节我们介绍这些内容
@@ -54,6 +218,15 @@
     x, & $x \geq 0$\\
     -x, &  $x < 0$
     \end{numcases}
+    % $$\begin{equation}       %开始数学环境
+      $\left(                 %左括号
+        \begin{array}{ccc}   %该矩阵一共3列，每一列都居中放置
+          a11 & a12 & a13\\  %第一行元素      
+          a21 & a22 & a23\\  %第二行元素
+        \end{array}
+      \right)$                 %右括号
+      % \end{equation}$$
+
 
 \AddEnumerateCounter{\chinese}{\chinese}{}
 
@@ -61,9 +234,11 @@
 
   \item 内容清晰
 
+
   \item 格式美观
 
 \end{enumerate}
+\subsection{逆序}
 
 
 \subsection{小节标题}这一小节我们介绍这些内容。
